service.yml
apiVersion: v1
kind: Service
metadata:
  name: k3s-blinker-svc
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    name: k3s-golang-blinker
